<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bus_list_item"
    android:layout_width="60dp"
    android:layout_height="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/ic_bus_list_item"
            android:src="@drawable/ic_bus_list_item"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/name_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_name_station"
                android:textColor="@color/dark"
                android:textSize="@dimen/text_bus_list_item" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp_10_km"
                android:textColor="@color/dark"
                android:textSize="@dimen/text_bus_list_item" />
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
